# SPDX-FileCopyrightText: 2022 Tammy Cravit
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "cpy_helpers"
version = "0.1.0"
description = "CircuitPython Development Helpers"
authors = ["Tammy Cravit <tammy@tammymakesthings.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-click = "^1.0.2"
ptipython = "^1.0.1"
black = "^22.1.0"
pylint = "^2.12.2"
ipdb = "^0.13.9"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
